# hermes-crew-hybrid

./: .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  consolidate.py  crewai_tools.py  docker-compose.yml  git_safety_crew.py  invoke_crew_task.py  mcp_tool_auditor.py  path_validator.py  pre-commit-hook.sh  pyproject.toml  requirements.txt  security_gateway.py  sonar-project.properties  test_consolidate.py  test_coverage_boost.py  test_crewai_tools.py  test_path_validator.py  test_pipeline.py  test_security_datasets.py
.github/: CODEOWNERS
.github/workflows/: tests.yml
tmp/crew_test/: result.md
