[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-crew-hybrid"
version = "0.2.0"
description = "Hermes as Conductor + CrewAI micro-crews + 3 security layers + Code Safety pre-commit hook"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Pedro Sordo Martínez", email = "amurlaniakea@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.100.0",
    "crewai-tools>=0.30.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools]
packages = [
    "invoke_crew_task", "consolidate", "security_gateway",
    "mcp_tool_auditor", "crewai_tools", "git_safety_crew",
    "path_validator",
]
py-modules = []

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "N", "ANN", "SIM",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
